added example for JEP 370 - foreign memory access API